added etag for /customMenu endpoint